--- a/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Views/inicio/registro.cshtml
+++ b/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Views/inicio/registro.cshtml
@@ -1,18 +1,21 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Regístrate</title>
     <link href="~/Assets/Lib/bootstrap5/bootstrap.css" rel="stylesheet" />
 
 </head>
 <body>
-    <div>
-        @RenderBody()
-    </div>
+
+
+
     <script src="~/Assets/Lib/bootstrap5/bootstrap.bundle.js"></script>
-    @RenderSection("scripts", required: false)
 </body>
 </html>
