--- a/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Views/inicio/inicio.cshtml
+++ b/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Views/inicio/inicio.cshtml
@@ -10,41 +10,55 @@
     <title>Inicia Sesión</title>
     <link href="~/Assets/Lib/bootstrap5/bootstrap.css" rel="stylesheet" />
     <style>
-        .half .bg {
-            background-size: cover;
-            background-position: center;
-        }
-
-        .half .contents, .half .bg {
-            width: 50%;
-        }
+      
     </style>
 </head>
 <body>
 
     <div class="d-lg-flex half">
-        <div class="bg order-1 order-md-2" style="background-image:url(https://preview.colorlib.com/theme/bootstrap/login-form-06/images/xbg_1.jpg.pagespeed.ic.nj5iPvtRed.webp)"></div>
+        <div class="bg order-1 order-md-2 bgimagen"></div>
         <div class="contents order-2 order-md-1 mt-lg-5">
             <div class="container">
                 <div class="row align-items-center justify-content-center">
                     <div class="col-md-7 mt-5">
-                        <div class="mb-4 mt-5">
-                            <h3>¡Te damos la bienvenida!</h3>
-                            <p class="mb-4">Escribe tus datos para entrar al sistema de votación</p>
+                        <div class="mt-3 mb-3">
+                            <h5>
+                                <svg width="30" height="30" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect x="4.24261" y="24.2428" width="28" height="4" rx="2" transform="rotate(-45 4.24261 24.2428)" fill="#660087" />
+                                    <rect x="12.7279" y="32.7281" width="28" height="4" rx="2" transform="rotate(-45 12.7279 32.7281)" fill="#660087" />
+                                    <rect x="15.5364" y="21.3946" width="16" height="4" rx="2" transform="rotate(45 15.5364 21.3946)" fill="#660087" />
+                                    <rect x="15.5563" y="4.44382" width="28" height="4" rx="2" transform="rotate(45 15.5563 4.44382)" fill="#660087" />
+                                </svg>
+                                Partido Morado
+                            </h5>
                         </div>
-                        <div class="mb-3">
+                        <div class="mb-4">
+                            <h3 class="titulo">¡Te damos la bienvenida!</h3>
+                            <p class="parrafo">Escribe tus datos para entrar al sistema de votación</p>
+                        </div>
+                        <div class="form-group mb-3">
                             <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <input type="email" class="form-control formulario-inicio" id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
-                        <div class="form-group last mb-3">
+                        <div class="form-group mb-3">
                             <label for="password">Contraseña</label>
-                            <input type="password" class="form-control" id="password">
+                            <input type="password" class="form-control formulario-inicio" id="password">
                         </div>
-                        <div class="d-flex mb-5 align-items-right">
-                            <span class="ml-auto"><a href="#" class="forgot-pass">¿Olvidaste tu contraseña?</a></span>
-                        </div>
-                        <input type="submit" value="Ingresar" class="btn btn-block btn-primary">
-
+                    </div>
+                </div>
+                <div class="row justify-content-center mb-4">
+                    <div class="col-md-7">
+                        <span class="ml-auto"><a href="#" class="forgot-pass">¿Olvidaste tu contraseña?</a></span>
+                    </div>
+                </div>
+                <div class="row align-items-center justify-content-center mt-4">
+                    <div class="col-md-5 text-center">
+                        <input value="Ingresar" class="btn btn-inicio">
+                    </div>
+                </div>
+                <div class="row align-items-center justify-content-center mt-4">
+                    <div class="col-md-7 text-center">
+                        <p class="enlace">¿Aún no te has registrado? <a href="@Url.Action("registro","inicio")" class="enlace-2">&nbsp;Click aquí para crear una cuenta</a></p>
                     </div>
                 </div>
             </div>
